September 14 2001:
	Changed to getopt_long
	added sleep parm
	manpage updated
	linux temp file name fixed for network loads
	8b zoom error fixed
	NAME CHANGE due to legal issues.
	fullscreen toggle no longer crashes

June 01 2001: 
	Released 1.4
	Initial network stuff
	Fixed X Async error for real (thnx Ted Mielczarek)

April 24 2001:
	Released 1.3
	Fixed X Async stuff
	Fixed 'only bad images' spin bug
	fixed, uh, other stuff, I guess

March 15 2001:
	Release 1.01
	Fixed memleak bug
	improved autoconf (now looks for SDL_image, too)

March 14 2001:
	Initial release (1.0)